# bukagu

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  RELEASING.md  install.sh
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: bukagu.rb.tmpl
src/: app.rs  cli.rs  credentials.rs  main.rs  message.rs  store.rs  theme.rs
src/backup/: archive.rs  crypto.rs  key.rs  mod.rs  restore.rs
src/core/: apply.rs  banner.rs  diff.rs  hash.rs  mapping.rs  mod.rs  scan.rs
src/ui/: backup.rs  browser.rs  dashboard.rs  mappings.rs  mod.rs  widgets.rs
