[package]
name = "bukagu"
version = "0.1.0"
edition = "2024"
authors = ["Berkay Karatay <karatay.berkay@gmail.com>"]
description = "A Swiss Army knife CLI for developers — file management and folder syncing from the terminal."
repository = "https://github.com/karatay-lab/bukagu"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "tui", "file-sync", "ratatui", "developer-tools"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Only what bukagu uses: `#[tokio::main]` (macros + a runtime) and
# `spawn_blocking` for the off-thread sync worker (rt). The worker→UI stream is
# a std::sync::mpsc channel and timing uses std, so no other tokio features.
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
