[package]
name = "bukagu"
version = "0.1.1"
edition = "2024"
authors = ["Berkay Karatay <karatay.berkay@gmail.com>"]
description = "A Swiss Army knife CLI for developers — file management and folder syncing from the terminal."
repository = "https://github.com/karatay-lab/bukagu"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "tui", "file-sync", "ratatui", "developer-tools"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
age = "0.11.3"
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
flate2 = "1.1.9"
ratatui = "0.30.1"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.46"
# Only what bukagu uses: `#[tokio::main]` (macros + a runtime) and
# `spawn_blocking` for the off-thread sync worker (rt). The worker→UI stream is
# a std::sync::mpsc channel and timing uses std, so no other tokio features.
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
ureq = { version = "^2", default-features = false, features = ["tls"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"

# Lean release binaries: strip symbols (done by rustc, so it works for
# cross-compiled targets too) and link-time optimize. Applies to every
# `--release` build, including the artifacts the release workflow ships.
[profile.release]
strip = true
lto = "thin"

# `.deb` packaging metadata, consumed by `cargo deb`.
# bukagu has no system-library deps beyond glibc, so we pin `libc6` rather than
# letting dpkg-shlibdeps probe (which is unreliable when cross-compiling arm64).
[package.metadata.deb]
maintainer = "Berkay Karatay <karatay.berkay@gmail.com>"
copyright = "2026, Berkay Karatay"
license-file = ["LICENSE-MIT", "0"]
extended-description = """
bukagu is a Rust CLI/TUI — a Swiss Army knife for developers, starting with
file syncing: mirror one read-only source folder into many destinations, or map
individual files, all from a ratatui dashboard."""
section = "utils"
priority = "optional"
depends = "libc6"
assets = [
    ["target/release/bukagu", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bukagu/README.md", "644"],
]
